--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "12.1.0",
     "prettier": "^2.5.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.49.9"
   },
   "devDependencies": {
     "eslint": "8.9.0",
