Estilacion del Header

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,7 +8,8 @@
             "@icons/*":["assets/icons/*"],
             "@logos/*":["assets/logos/*"],
             "@context/*":["context/*"],
-            "@styles/*": ["styles/*"]
+            "@styles/*": ["styles/*"],
+            "@hooks/*": ["hooks/*"]
         }
     }
 }
