--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "next": "12.1.0",
+    "next-pwa": "^5.4.6",
     "prettier": "^2.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
